using UnityEngine;

namespace Game.Characters.Movement
{
   
    
    public static class MovementConstants
    {
        public const string Running = "RUNNING";
        public const string Idle = "IDLE";
        public const string Shooting = "SHOOTING";
        public const string Hurt = "HURT";
        public const string Dying = "DYING";
        public const string Jumping = "JUMPING";
        public const string Falling = "FALLING";
    }
}
